--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.0.0"
     testImplementation 'androidx.arch.core:core-testing:2.0.0'
-
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.2'
 }
